--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ nav:
       - 概述: shijia/doorman/index.md
       - 孝子食饼: shijia/doorman/story-1.md
       - 食兔疑肉: shijia/doorman/story-2.md
+    - 蚂蚁 世家:
+      - 概述: shijia/ant/index.md
 
 
 theme:
