--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - 食兔疑肉: shijia/doorman/story-2.md
     - 蚂蚁 世家:
       - 概述: shijia/ant/index.md
+      - 树全切: shijia/ant/ant-fullcombo.md
     - 佐传 世家:
       - 概述: shijia/zuozhuan/index.md
     - 严神 世家:
